--- a/index.html
+++ b/index.html
@@ -71,5 +71,14 @@
                 </div>
             </div>
         </section>
+
+        <section class="sound-section">
+            <div class="container">
+                <div class="second-heading">
+                    <h2>Sound, that <span class="color">sounds better!</span></h2>
+                    <p>With lots of unique blocks, you can easily build a page without coding. Build your next consultancy website within few minutes.</p>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
