--- a/index.html
+++ b/index.html
@@ -80,5 +80,49 @@
                 </div>
             </div>
         </section>
+
+        <section class="contact-section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-6">
+                        <div class="form-col">
+                            <h2>Contact Us Now</h2>
+
+                            <form class="form">
+                                <div class="flex">
+                                    <label for="name">Name</label>
+                                    <input type="text" id="name" placeholder="Hagar  Ahmed">
+                                </div>
+
+                                <div class="flex">
+                                    <label for="country">Country</label>
+                                    <select  id="country">
+                                        <option>Egypt</option>
+                                        <option>Egypt</option>
+                                        <option>Egypt</option>
+                                    </select>
+                                </div>
+
+                                <div class="flex">
+                                    <label for="phone">Phone number</label>
+                                    <input type="tel" id="phone" placeholder="Phone No.">
+                                </div>
+
+                                <div class="flex">
+                                    <label for="message">Enter a message</label>
+                                    <textarea id="message" placeholder="Please type your message here..."></textarea>
+                                </div>
+
+                                <button type="submit">Contact US</button>
+                            </form>
+                        </div>
+                    </div>
+
+                    <div class="col-6">
+                        <img src="./imgs/form-img.png">
+                    </div>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
