final-contact-section

--- a/index.html
+++ b/index.html
@@ -96,11 +96,17 @@
 
                                 <div class="flex">
                                     <label for="country">Country</label>
-                                    <select  id="country">
-                                        <option>Egypt</option>
-                                        <option>Egypt</option>
-                                        <option>Egypt</option>
-                                    </select>
+                                    <div class="select-icon">
+                                        <select  id="country">
+                                            <option>Egypt</option>
+                                            <option>Egypt</option>
+                                            <option>Egypt</option>
+                                        </select>
+
+                                        <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 12 12" fill="none">
+                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M10.193 3.97001C10.3338 3.82918 10.5248 3.75006 10.724 3.75006C10.9232 3.75006 11.1142 3.82918 11.255 3.97001C11.3958 4.11084 11.4749 4.30184 11.4749 4.50101C11.4749 4.70017 11.3958 4.89118 11.255 5.03201L6.53 9.75601C6.38938 9.89646 6.19875 9.97535 6 9.97535C5.80125 9.97535 5.61063 9.89646 5.47 9.75601L0.745002 5.03201C0.604172 4.89118 0.525055 4.70017 0.525055 4.50101C0.525055 4.30184 0.604172 4.11084 0.745002 3.97001C0.885832 3.82918 1.07684 3.75006 1.276 3.75006C1.47517 3.75006 1.66617 3.82918 1.807 3.97001L6 8.16301L10.193 3.97001Z" fill="#A5ACB8"/>
+                                          </svg>
+                                    </div>
                                 </div>
 
                                 <div class="flex">
